# 2dcl

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain  shell.nix
2dcl/: Cargo.toml  config.toml
2dcl/assets/: 2DCL_psdSceneTest.psd  PostProcess.wgsl  animation.json  interact.json  interact_animation.json  player.json  player_animation.json  player_animations.json  roads.mp  scene.json
2dcl/assets/avatar/: idle.glb  interact.json  player.json
2dcl/assets/prebuild_scenes/scene1/: scene.json
2dcl/assets/prebuild_scenes/scene2/: player.json
2dcl/assets/roads/: roads.mp
2dcl/assets/scene/: scene.json
2dcl/assets/scenes/bafkreibvryl3r6nrigu4cskqdsttnv3sbwz42vco5n7xuydkrly6j33dwm/: scene.json
2dcl/assets/scenes/scene1/: scene.2dcl
2dcl/assets/scenes/scene2/: scene.2dcl  (+1 more)
2dcl/assets/wearables/: 1.json  2.json  2DCL_BaseCharacterAnimations_withWearables_Body.json  2DCL_BaseCharacterAnimations_withWearables_Feet.json  2DCL_BaseCharacterAnimations_withWearables_Hair.json  2DCL_BaseCharacterAnimations_withWearables_HeadAccessory.json  2DCL_BaseCharacterAnimations_withWearables_Lower.json  2DCL_BaseCharacterAnimations_withWearables_Upper.json  2DCL_BaseCharacterAnimations_withWearables_bg.json  avatar_body.json  avatar_shadow_bg.json  hat_head_accesory.json  player_body.json
2dcl/definitions/: config.md
2dcl/src/: components.rs  main.rs  previewer.rs  resources.rs
2dcl/src/avatar_sprite_maker/: mod.rs
2dcl/src/avatar_spritesheet_maker/: error.rs  mod.rs
2dcl/src/bundles/: animator.rs  downloading_scene.rs  level.rs  mod.rs  scene.rs  sprite_renderer.rs  transform.rs
2dcl/src/compiler/: mod.rs
2dcl/src/content_discovery/: mod.rs
2dcl/src/deploy/: mod.rs
2dcl/src/kernel/: Cargo.toml  main.rs
2dcl/src/metamask_login/: mod.rs
2dcl/src/previewer/: collider_debugger.rs  deploy.rs  level_switch.rs  manual_refresh.rs  mod.rs  scene_hot_reload.rs  ui.rs
2dcl/src/renderer/: animation.rs  animations.rs  collision.rs  components.rs  config.rs  console.rs  constants.rs  content_discovery.rs  custom_material.rs  dcl_3d_scene.rs  dcl_scene.rs  debug.rs  discovery_ui.rs  error.rs  mod.rs  player copy.rs  player.rs  player_sprite_maker.rs  preview.rs  psd_reader.rs  render_to_texture.rs  resources.rs  road_maker.rs  roads_updater.rs  sceen_fadeout  scene_deserializer.rs  scene_loader.rs  scene_maker.rs  scenes_io.rs  screen_fade.rs  transparency.rs
2dcl/src/states/: mod.rs
2dcl/src/where_command/: mod.rs
2dcl/src/ws/: mod.rs
bevy_capture_media-trunk/: Cargo.toml
bevy_capture_media-trunk/examples/: basic_orthographic.rs  basic_perspective.rs
bevy_capture_media-trunk/src/: data.rs  image_utils.rs  lib.rs  management.rs  render.rs
bevy_capture_media-trunk/src/formats/: gif.rs  png.rs
bevy_spritesheet_maker/: Cargo.toml
bevy_spritesheet_maker/src/: data.rs  image_utils.rs  lib.rs  management.rs  render.rs  web_utils.rs
bevy_spritesheet_maker/src/formats/: mod.rs  png.rs
catalyst/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
catalyst/examples/: deploy.rs  download_content.rs  download_scene_files.rs  get_list_of_servers.rs  get_profile.rs  get_scenes.rs  get_scenes_from_snapshot.rs  get_server_status.rs  raw_get.rs  raw_post.rs  run_js.rs
catalyst/fixtures/: about.json  audit_scene_result.json  available_content.json  challenge.json  changes.json  collections.json  content_server_status.json  deploy_timestamp.json  emote.json  emotes_for_address.json  entities_by_hash.json  entities_by_urn.json  entity.json  erc721_entity.json  failed_deployments.json  forbidden_names.json  genesis_plaza_scene.json  hot_scenes.json  island.json  islands_list.json  lands_for_address.json  names_for_address.json  outfits.json  outfits_entity.json  parcels_stats.json  peers_list.json  pois.json  profile.json  profiles.json  realms.json  scene.json  scenes_from_parcels.json  servers.json  snapshot.json  status.json  third_party_integrations.json  third_party_wearables_for_address.json  wearable.json  wearables_for_address.json
catalyst/src/: archipelago_client.rs  challenge.rs  content_client.rs  content_id.rs  deployment.rs  emote.rs  entity.rs  entity_files.rs  entity_information.rs  global_client.rs  island.rs  lambda_client.rs  lambdas_client.rs  lib.rs  outfits.rs  parcel.rs  profile.rs  scene.rs  server.rs  snapshot.rs  status.rs  wearable.rs
ethereum-adapter/: Cargo.toml
ethereum-adapter/examples/: deploy.rs  login.rs  sign-deploy.rs
ethereum-adapter/fixtures/2dcl/: scene.2dcl
ethereum-adapter/frontend/: README.md  package-lock.json  package.json
ethereum-adapter/frontend/src/: index.js
ethereum-adapter/src/: lib.rs  server.rs
experiments/: Cargo.toml
experiments/assets/: PostProcess.wgsl  my_3dMaterial.wgsl  my_material.wgsl  vogu_pod.glb
experiments/assets/avatar/: Attack_emote_v3.glb  DCL_KO_X_STEPHY_JACKET.glb  Festival_hat_02.glb  Hair_ShortHair_01.glb  M_Beard.glb  M_lBody_FWPants.glb  M_uBody_FWShirt.glb  cap.glb  dc_halloween_bat.glb  shoes.glb  xmas_2021_santa_xray.glb
experiments/src/: capture - Copy.rs  capture.rs  main - PostProcess.rs  main - collider remover.rs  main - gltf render.rs  main - pngExport.rs  main -2dMaterial shader.rs  main.rs
renderer/: Cargo.toml
renderer/src/: index.html  main.rs  server.rs
scene-compiler/: Cargo.toml
scene-compiler/fixtures/build_path_not_empty/: scene.json
scene-compiler/fixtures/no_parcel/: scene.json
scene-compiler/fixtures/test_alpha_collider/: scene.2dcl
scene-compiler/fixtures/test_box_collider/: scene.json
scene-compiler/fixtures/test_circle_collider/: scene.2dcl  scene.json
scene-compiler/fixtures/test_scene_entities/: scene.json
scene-compiler/fixtures/test_scene_parcels/: scene.2dcl  scene.json
scene-compiler/fixtures/test_sprite_renderer_component/: scene.json
scene-compiler/src/: error.rs  lib.rs  main.rs
scene-deployer/: Cargo.toml
scene-deployer/src/: error.rs  lib.rs
scene-runtime/: Cargo.toml  README.md  build.rs
scene-runtime/src/: interface.js  interface.rs  lib.rs  scene_runtime.rs
scene-runtime/src/protocol/: mod.rs
(+182 files in other folders)
