[package]
name = "dcl"
version = "0.1.0"
edition = "2021"
default-run = "2dcl"

[[bin]]
name = "2dcl"
path = "src/main.rs"

[[bin]]
name = "kernel"
path = "src/kernel/main.rs"

[dependencies]
wry = "0.19.0"
bevy = "0.8.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
dcl-common = { path = "../dcl-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image= "0.24.3"
bevy-inspector-egui = "0.12"
aseprite = "0.1.3"
psd = "0.3.4"
catalyst = {path = "../catalyst"}
walkdir = "2"