[package]
name = "dcl"
version = "0.1.0"
edition = "2021"
default-run = "2dcl"

[[bin]]
name = "2dcl"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_ui", "bevy_asset", "bevy_text", "png", "vorbis", "bevy_sprite", "bevy_winit", "mp3", "x11"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
dcl-common = { path = "../dcl-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image= "0.24.3"
bevy-inspector-egui = "0.18.1"
aseprite = "0.1.3"
psd = "0.3.4"
catalyst = {path = "../catalyst"}
walkdir = "2"
clap = { version = "4.0.17", features = ["derive"] }
futures-lite = "1.12.0"
rmp-serde = "1.1.1"
rmp = "^0.8"
notify = "5.1.0"
scene-compiler = { path = "../scene-compiler" }
scene-deployer = { path = "../scene-deployer" }
ethereum-adapter = { path = "../ethereum-adapter" }
dcl2d-ecs-v1 = { path = "../ecs-v1" }
ron = "0.8.0"
imagesize = "0.10.1"
bevy_console = "0.7.0"
glob = "0.3.0"
rand = "0.8.5"
tempdir = "0.3"
bevy_spritesheet_maker = {path= "../bevy_spritesheet_maker"}
toml = "0.7.3"
bevy_toon_shader = { git = "https://github.com/tbillington/bevy_toon_shader" }
chrono = "0.4.18"
dcl-crypto = "0.2.1"