[package]
name = "bevy_spritesheet_maker"
version = "0.0.1"
edition = "2021"
exclude = ["assets"]

[features]
default = ["png"]
png = ["dep:image"]

[dependencies]
bevy =  "0.11.0" 
log = "0.4"
wgpu = "0.16.2"
futures-lite = "1.13"

# Dependencies for all image types
image = { version = "0.24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.58" }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.58"
features = [
	"Window",
	"Document",
	"Blob",
	"BlobPropertyBag",
	"Element",
	"HtmlElement",
	"FileReader",
	"HtmlCollection",
]


[package.metadata.docs.rs]
all-features = true
cargo-args = ["--cfg", "docsrs"]