[package]
name = "catalyst"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
dcl-common = { path = "../dcl-common" }
dcl-crypto = "0.2.1"

[dev-dependencies]
httpmock = "0.6"
tokio-test = "0.4.2"
tokio = { version = "1", features = ["full"] }
tempdir = "0.3"
futures = "0.3.21"
