[package]
name = "bevy_shader_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.1"
image = { version = "0.24.2"}
bevy-inspector-egui = "0.18.3"
bevy_capture_media = {path= "../bevy_capture_media-trunk"}
catalyst = {path = "../catalyst"}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
dcl-common = { path = "../dcl-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.17", features = ["derive"] }
glob = "0.3.0"