[package]
name = "renderer"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "2dcl"
path = "src/main.rs"

[dependencies]
wry = "0.19.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
