[package]
name = "scene-compiler"
version = "0.0.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "2dcl-scene-compiler"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dcl-common = { path = "../dcl-common" }
dcl2d-ecs-v1 = { path = "../ecs-v1" }
rmp-serde = "1.1.1"
tempdir = "0.3"
clap = { version = "4.0.17", features = ["derive"] }
