[package]
name = "scene-runtime"
version = "0.0.0"
edition = "2021"
resolver = "2"

[dependencies]
dcl-common = { path = "../dcl-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.143.0"
serde_v8 = "0.54.0"
prost = "0.10"
# prost-types = "0.10"

[build-dependencies]
prost-build = "0.10"
